	'RDAIRPLAY.UDP_STRING1', 'RDAIRPLAY.UDP_STRING2', 'RDAIRPLAY.LOG_RML0',
	'RDAIRPLAY.LOG_RML1', 'RDAIRPLAY.LOG_RML2', 'RDAIRPLAY.OP_MODE' and
	'RDAIRPLAY.START_MODE' fields from the database.
	* Incremented the database version to 256.
	* Added a 'ListNowNextPlugins' widget in
	'rdadmin/list_nownextplugins.cpp' and 'rdadmin/list_nownextplugins.h'.
2015-01-01 Fred Gleason <fredg@paravelsystems.com>
	* Changed the value of 'RDAIRPLAY_LOG_QUANTITY' from '3' to '16'
	'lib/rd.h'.
	* Removed 'RDAIRPLAY.SHOW_AUX_1' and 'RDAIRPLAY.SHOW_AUX_2'
	fields from the database.
	* Incremented the database version to 247.
	* Removed 'RDAirPlayConf::showAuxButton()' and
	'RDAirPlayConf::setShowAuxButton()' methods from
	'lib/rdairplay_conf.cpp' and 'lib/rdairplay_conf.h'.
	* Added a log selector dropdown to handle cases where more than
	three log machines are enabled in 'rdairplay/rdairplay.cpp' and
	'rdairplay/rdairplay.h'.
2015-01-01 Fred Gleason <fredg@paravelsystems.com>
	* Refactored Start/Stop controls in 'rdadmin/edit_rdairplay.cpp'
	and 'rdadmin/edit_rdairplay.h' to use a separate widget in
	'rdadmin/edit_startstop.cpp' and 'rdadmin/edit_startstop.h'.
2015-01-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Load Log' ['LL'] RML for Aux Logs 3-16.
2015-01-01 Fred Gleason <fredg@paravelsystems.com
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Append Log' ['AL'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Make Next' ['MN'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Start' ['PL'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Start Next' ['PN'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Stop' ['PS'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Set Duck Level' ['MD'] RML for Aux Logs 3-16.