@@ -14801,3 +14801,6 @@
 	'Stop' ['PS'] RML for Aux Logs 3-16.
 	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
 	'Set Duck Level' ['MD'] RML for Aux Logs 3-16.
+2015-01-01 Fred Gleason <fredg@paravelsystems.com
+	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
+	'Select Widget' ['PW'] RML for Aux Logs 3-16.
